@@ -14,6 +14,7 @@ DRAFT 0.4.1
 * NEW: Added new property `fdri:calibrationDue` as an optional property of `fdri:EnvironmentalMonitoringSystem`. (#17)
 * NEW: Added property `dcat:keyword` as an optional, repeatable propety of `fdri:EnvironmentalMonitoringSystemType`. (#8)
 * NEW: Added properties `fdri:deploymentNote` and `fdri:dependencyNote`. Made `fdri:deploymentVariance` and `fdri:dependencyNote` sub-properties of `fdri:deploymentNote`. The domain of `fdri:deploymentNote` is restricted to `fdri:Deployment`. (#16)
+* NEW: Added property `fdri:canopyHeight` as an optional property of `fdri:Deployment`. (#15)
 
 DRAFT 0.4
 ---------
